# ClaudeEmboidery

./: .gitignore  CLAUDE.md  EMBROIDERY-PLAYBOOK.md  INCIDENTS.md  NEXT-GOALS.md  PAIRS-FINDINGS.md  README.md  pyproject.toml  wilcom-manual-rules.md
3D/: 3d-embroidery-knowledge.md  make_3d_test.py
3D/output/: gold2026_pro_threadlist.txt
animals/: animals-embroidery-knowledge.md
anime/: README.md  best-practices.md  process.md  rei-digitizing-plan.md
anime/assets/: make_kitsune.py  make_totoro.py
anime/output/: killua_pro_threadlist.txt  kitsune_pro_threadlist.txt  rei_ayanami_pro_threadlist.txt  (+1 more)
arabic/: arabic-embroidery-knowledge.md
data/: category_profiles.json  pair_priors.json
decoration/: decoration-embroidery-knowledge.md
falahi/: falahi-embroidery-knowledge.md
letters/: letters-embroidery-knowledge.md
numbers/: numbers-embroidery-knowledge.md
pairs-inbox/: GEMINI-PROPS-PROMPT.md  README.md
phase_b/: README.md  emb_save.ahk
simple-shapes/: simple-shapes-embroidery-knowledge.md
svg-and-geometry-approach/: FINDINGS.md  extract_pair.py  pink-goku_objects.json
tatreez/: tatreez-embroidery-knowledge.md
tests/: test_analyze.py  test_auto_repair.py  test_config.py  test_cross_stitch.py  test_emit.py  test_fingerprint.py  test_outline_objects.py  test_pair_priors.py  test_per_group_merge.py  test_preprocess.py  test_sketch_stitch.py  test_sld_strokes.py  test_smoke.py  test_stitches.py  test_thread_match.py  test_trace.py  test_travel_plan.py  test_turning_satin.py  test_underlap.py  test_verify.py  test_vwidth_satin.py
(+432 files in other folders)
